// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render InputMapPoint with various parameters Test with all parameters 1`] = `
<div>
  <div
    class="survey-question__input-map-container"
  >
    <input
      class="apptr__form-input input-map-hidden"
      id="test"
      readonly=""
      type="hidden"
      value="{"type":"Feature","properties":{},"geometry":{"type":"Point","coordinates":[-73.1,45.02]}}"
    />
    <button
      class="button refresh-geocode green large"
      id="test_refresh"
      style="display: none;"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-location-dot faIconLeft"
        data-icon="location-dot"
        data-prefix="fas"
        role="img"
        viewBox="0 0 384 512"
      >
        <path
          d="M0 188.6C0 84.4 86 0 192 0S384 84.4 384 188.6c0 119.3-120.2 262.3-170.4 316.8-11.8 12.8-31.5 12.8-43.3 0-50.2-54.5-170.4-197.5-170.4-316.8zM192 256a64 64 0 1 0 0-128 64 64 0 1 0 0 128z"
          fill="currentColor"
        />
      </svg>
      Refresh map
    </button>
    <div
      aria-hidden="true"
      class="survey-question__input-map-container"
    >
      <div
        class="loader"
      >
        <p>
          Loading
          ...
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render InputMapPoint with various parameters Test with minimal parameters 1`] = `
<div>
  <div
    class="survey-question__input-map-container"
  >
    <input
      class="apptr__form-input input-map-hidden"
      id="test"
      readonly=""
      type="hidden"
    />
    <div
      aria-hidden="true"
      class="survey-question__input-map-container"
    >
      <div
        class="loader"
      >
        <p>
          Loading
          ...
        </p>
      </div>
    </div>
  </div>
</div>
`;
